# ai_vision_pkg

./: CMakeLists.txt  package.xml  requierments.ipynb  setup.cfg  setup.py
ai_vision_pkg/: NIM_Llama.py  florence_inference_member_function.py  image_publisher.py  sam2_inference.py  save_pointcloud.py
install/: local_setup.sh  setup.sh
install/ai_vision_pkg/lib/ai_vision_pkg/: florence  image_publisher  listener  llama_NIM  sam2  take_photo  talker  vision_system
install/ai_vision_pkg/share/ai_vision_pkg/: package.xml
install/ai_vision_pkg/share/ai_vision_pkg/launch/: florence_inference_launch.py  vision_system_launch.py
install/ai_vision_pkg/share/ai_vision_pkg/srv/: LlamaService.srv
launch/: accurate_florence_ontology_segment_launch.py  fast_florence_ontology_segment_launch.py  florence_inference_launch.py  vision_system_launch.py
launch/install/: local_setup.sh  setup.sh
launch/log/: latest_build
log/: latest_build
srv/: LlamaService.srv
